removed redundent html page

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,13 +61,16 @@
                                                             Featured event:<br> May 24, 2016<br> 7-11pm
                                                         </h4> -->
                         </div>
-                        <div class="mdl-card__actions mdl-card--border">
-                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/purple">
+                        <a href="/purple">
+                            <div class="mdl-card__actions mdl-card--border">
+                                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/purple">
                                                             Set purple
                                                           </a>
-                            <div class="mdl-layout-spacer"></div>
+                                <div class="mdl-layout-spacer"></div>
                             <i class="material-icons">mode_edit</i>
-                        </div>
+                            </div>
+                        </a>
+
                     </div>
 
                     <div class="demo-card-event mdl-card mdl-shadow--2dp red">
