Set Red button to Link

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@ mdl-layout--fixed-tabs">
             <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
                 <div class="page-content">
                     <!-- Your content goes here -->
-                    <div class="circle-text" href="/rednew">
+                    <a class="circle-text" href="/rednew">
                         Red
-                    </div>
+                    </a>
                     <div class="circle-text" href="/bluenew">
                         Blue
                     </div>
