--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,80 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>My Page Title</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        
+        .colorpick {
+            float: left;
+            width: 100%;
+            text-align: center;
+        }
+        
+        .colorpick a {
+            background-color: #e5e5e5;
+            padding: 8px;
+            margin-top: 7px;
+            display: block;
+            width: 100%;
+            color: black;
+        }
+        
+        .main {
+            float: left;
+            width: 60%;
+            padding: 0 20px;
+        }
+        
+        .right {
+            background-color: #e5e5e5;
+            float: left;
+            width: 20%;
+            padding: 15px;
+            margin-top: 7px;
+            text-align: center;
+        }
+        
+        @media only screen and (max-width:620px) {
+            /* For mobile phones: */
+            .menu,
+            .main,
+            .right {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 
-<body>
-    <!-- Simple header with fixed tabs. -->
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
-mdl-layout--fixed-tabs">
-        <header class="mdl-layout__header">
-            <div class="mdl-layout__header-row">
-                <!-- Title -->
-                <span class="mdl-layout-title">Title</span>
-            </div>
-            <!-- Tabs -->
-            <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-                <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
-                <a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>
-                <a href="#fixed-tab-3" class="mdl-layout__tab">Tab 3</a>
-            </div>
-        </header>
-        <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Title</span>
-        </div>
-        <main class="mdl-layout__content">
-            <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
-                <div class="page-content">
-                    <!-- Your content goes here -->
-                    <a class="circle-text" href="/rednew">
-                        Red
-                    </a>
-                    <div class="circle-text" href="/bluenew">
-                        Blue
-                    </div>
-                    <div class="circle-text" href="/greennew">
-                        Green
-                    </div>
-                </div>
-            </section>
-            <section class="mdl-layout__tab-panel" id="fixed-tab-2">
-                <div class="page-content">
-                    <!-- Your content goes here -->
-                </div>
-            </section>
-            <section class="mdl-layout__tab-panel" id="fixed-tab-3">
-                <div class="page-content">
-                    <!-- Your content goes here -->
-                </div>
-            </section>
-        </main>
+<body style="font-family:Verdana;color:#aaaaaa;">
+
+    <div style="background-color:#e5e5e5;padding:15px;text-align:center;">
+        <h1>Hello World</h1>
     </div>
+
+    <div style="overflow:auto">
+        <div class="colorpick">
+            <a href="/rednew">Red</a>
+            <a href="/greennew">Green</a>
+            <a href="/bluenew">Blue</a>
+            <a href="/fadeoff">Off</a>
+        </div>
+
+        <div class="main">
+            <h2>Lorum Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        </div>
+
+        <div class="right">
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+        </div>
+    </div>
+
+    <div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">© copyright w3schools.com</div>
 
 </body>
 
