--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-amber.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="static/css/colours.css">
 
 <body>
 
@@ -36,7 +37,9 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <a href="/rednew">Red<</a>
+                <div class="w3-container red">
+                    <a href="/rednew">Red<</a>
+                </div>
             </div>
         </div>
 
