--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <div class="w3-container red">
+                <div class="w3-container w3-amber">
                     <a href="/rednew">Red<</a>
                 </div>
             </div>
