--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,8 @@
             <div class="w3-card-4">
                 <div class="w3-container w3-amber">
                     <a href="/rednew">Red<</a>
+                    <p>Set it to Red</p>
+
                 </div>
             </div>
         </div>
