--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,8 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-amber">
-                    <a href="/rednew">Red<</a>
+                    <a href="/rednew">Red</a>
                     <p>Set it to Red</p>
-
                 </div>
             </div>
         </div>
@@ -50,6 +49,7 @@
                 <img src="img_5terre.jpg" style="width:100%">
                 <div class="w3-container w3-white">
                     <h4>Cinque Terre</h4>
+                    <a href="/rednew">Red</a>
                     <p>The Cinque Terre (five lands) is a portion of the Italian Riviera. The coastline with five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore is a UNESCO World Heritage Site.</p>
                 </div>
             </div>
