--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <img src="img_monterosso.jpg" style="width:100%">
+                <!-- <img src="img_monterosso.jpg" style="width:100%"> -->
                 <div class="w3-container w3-white">
                     <h4>Monterosso</h4>
                     <p>Monterosso al Mare is located at the center of a small natural gulf, protected by a small artificial reef, in the Riviera of La Spezia. It is the northernmost village of the Cinque Terre.</p>
