--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <div class="w3-container w3-amber">
+                <div class="w3-container w3-white">
                     <a href="/rednew">Red</a>
                     <p>Set it to Red</p>
                 </div>
@@ -46,7 +46,7 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <img src="img_5terre.jpg" style="width:100%">
+                <!-- <img src="img_5terre.jpg" style="width:100%"> -->
                 <div class="w3-container w3-white">
                     <!-- <h4>Cinque Terre</h4> -->
                     <a href="/rednew">Red</a>
