--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,10 @@
             </div>
         </div>
 
-        <div class="w3-half">
+        <!-- ============================ Search Bar ============================ -->
+        <!-- <div class="w3-half">
             <input type="text" class="w3-amber w3-border-0 w3-padding" style="width:100%">
-        </div>
+        </div> -->
 
         <div class="w3-quarter">
             <div class="w3-bar w3-xlarge">
@@ -30,7 +31,7 @@
     </div>
 
     <div class="w3-container w3-padding-32 w3-theme-d1">
-        <h1>Places to Visit</h1>
+        <h1>LED Controller</h1>
     </div>
 
     <div class="w3-row-padding w3-theme">
