--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,13 @@
             <input type="text" class="w3-amber w3-border-0 w3-padding" style="width:100%">
         </div> -->
 
-        <div class="w3-quarter">
+        <!-- <div class="w3-quarter">
             <div class="w3-bar w3-xlarge">
                 <a href="#" class="w3-bar-item w3-button w3-left"><i class="fa fa-search"></i></a>
                 <a href="#" class="w3-bar-item w3-button w3-right"><img class="w3-hide-small w3-circle" src="img_avtar.jpg" style="height:40px;"></a>
             </div>
 
-        </div>
+        </div> -->
     </div>
 
     <div class="w3-container w3-padding-32 w3-theme-d1">
