--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
 
 <body>
 
-    <div class="w3-row w3-padding w3-theme-d2 w3-xlarge red">
+    <div class="w3-row w3-padding  w3-xlarge red">
         <div class="w3-quarter">
             <div class="w3-bar">
                 <a href="#" class="w3-bar-item w3-button"><i class="fa fa-bars"></i></a>
             </div>
         </div>
 
-        <!-- ============================ Search Bar ============================ -->
+        <!-- ============================ Search Bar ============================ w3-theme-d2 -->
         <!-- <div class="w3-half">
             <input type="text" class="w3-amber w3-border-0 w3-padding" style="width:100%">
         </div> -->
