--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         </div> -->
     </div>
 
-    <div class="w3-container w3-padding-32 w3-theme-d1">
+    <div class="w3-container w3-padding-32 red">
         <h1>LED Controller</h1>
     </div>
 
