--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,21 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-amber.css">
+<!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-amber.css"> -->
+<link rel="stylesheet" href="static/css/w3-theme-amber.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="static/css/colours.css">
 
 <body>
 
-    <div class="w3-row w3-padding  w3-xlarge red">
+    <div class="w3-row w3-padding w3-theme-d2 w3-xlarge red">
         <div class="w3-quarter">
             <div class="w3-bar">
                 <a href="#" class="w3-bar-item w3-button"><i class="fa fa-bars"></i></a>
             </div>
         </div>
 
-        <!-- ============================ Search Bar ============================ w3-theme-d2 -->
+        <!-- ============================ Search Bar ============================ -->
         <!-- <div class="w3-half">
             <input type="text" class="w3-amber w3-border-0 w3-padding" style="width:100%">
         </div> -->
@@ -30,7 +31,7 @@
         </div> -->
     </div>
 
-    <div class="w3-container w3-padding-32 red">
+    <div class="w3-container w3-padding-32 w3-theme-d1">
         <h1>LED Controller</h1>
     </div>
 
