--- a/static/css/w3-theme-amber.css
+++ b/static/css/w3-theme-amber.css
@@ -25,12 +25,12 @@
 
 .w3-theme-d1 {
     color: #000 !important;
-    background-color: #ea0000 !important
+    background-color: rgb(255, 0, 0) !important
 }
 
 .w3-theme-d2 {
     color: #fff !important;
-    background-color: #d00000 !important
+    background-color: #cc0000 !important
 }
 
 .w3-theme-d3 {
