--- a/static/css/w3-theme-amber.css
+++ b/static/css/w3-theme-amber.css
@@ -65,7 +65,7 @@
 
 .w3-theme {
     color: #000 !important;
-    background-color: #ffc107 !important
+    background-color: #ff3232 !important
 }
 
 .w3-text-theme {
