--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<title>LED control Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-amber.css"> -->
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <!-- ============================ Search Bar ============================ -->
+        <!-- ============================ Search Bar START ============================ -->
         <!-- <div class="w3-half">
             <input type="text" class="w3-amber w3-border-0 w3-padding" style="width:100%">
         </div> -->
@@ -29,6 +29,7 @@
             </div>
 
         </div> -->
+        <!-- ============================ Search Bar END ============================ -->
     </div>
 
     <div class="w3-container w3-padding-32 w3-theme-d1">
@@ -41,18 +42,14 @@
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
                     <a href="/rednew">Red</a>
-                    <p>Set it to Red</p>
                 </div>
             </div>
         </div>
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <!-- <img src="img_5terre.jpg" style="width:100%"> -->
                 <div class="w3-container w3-white">
-                    <!-- <h4>Cinque Terre</h4> -->
-                    <a href="/rednew">Red</a>
-                    <!-- <p>The Cinque Terre (five lands) is a portion of the Italian Riviera. The coastline with five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore is a UNESCO World Heritage Site.</p> -->
+                    <a href="/greennew">Green</a>
                 </div>
             </div>
         </div>
