--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <a href="/rednew">Red</a>
+                    <h4 href="/rednew">Red</h4>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <a href="/greennew">Green</a>
+                    <h4 href="/greennew">Green</h4>
                 </div>
             </div>
         </div>
