--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,14 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
+                <div class="w3-container w3-white">
+                    <h4><a href="/bluennew">Blue</a></h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-third w3-section">
+            <div class="w3-card-4">
                 <!-- <img src="img_monterosso.jpg" style="width:100%"> -->
                 <div class="w3-container w3-white">
                     <h4>Monterosso</h4>
