--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,14 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
+                    <h4><a href="/fadeoff">Off</a></h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-third w3-section">
+            <div class="w3-card-4">
+                <div class="w3-container w3-white">
                     <h4><a href="/rednew">Red</a></h4>
                 </div>
             </div>
@@ -64,24 +72,46 @@
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <!-- <img src="img_monterosso.jpg" style="width:100%"> -->
                 <div class="w3-container w3-white">
-                    <h4>Monterosso</h4>
-                    <p>Monterosso al Mare is located at the center of a small natural gulf, protected by a small artificial reef, in the Riviera of La Spezia. It is the northernmost village of the Cinque Terre.</p>
+                    <h4><a href="/bluenew">Pink</a></h4>
                 </div>
             </div>
         </div>
 
         <div class="w3-third w3-section">
             <div class="w3-card-4">
-                <img src="img_vernazza.jpg" style="width:100%">
                 <div class="w3-container w3-white">
-                    <h4>Vernazza</h4>
-                    <p>Vernazza is another of the five towns in the region. Vernazza is the fourth town heading north. It has no car traffic, and is one of the truest "fishing villages" on the Italian Riviera.
+                    <h4><a href="/bluenew">Orange</a></h4>
                 </div>
             </div>
-            <br><br><br>
         </div>
+
+        <div class="w3-third w3-section">
+            <div class="w3-card-4">
+                <div class="w3-container w3-white">
+                    <h4><a href="/bluenew">White</a></h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-third w3-section">
+            <div class="w3-card-4">
+                <div class="w3-container w3-white">
+                    <h4><a href="/bluenew">Yellow</a></h4>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="w3-third w3-section">
+            <div class="w3-card-4">
+                <img src="img_monterosso.jpg" style="width:100%">
+                <div class="w3-container w3-white">
+                    <h4>Monterosso</h4>
+                    <p>Monterosso al Mare is located at the center of a small natural gulf, protected by a small artificial reef, in the Riviera of La Spezia. It is the northernmost village of the Cinque Terre.</p>
+                </div>
+            </div>
+        </div> -->
+
     </div>
     <div class="w3-container w3-theme-d4">
         <p class="w3-large">Europe Italy</p>
