--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/fadeoff">Off</a></h4>
+                    <h4><a href="/fadeoffnew">Off</a></h4>
                 </div>
             </div>
         </div>
