--- a/static/css/w3-theme-off.css
+++ b/static/css/w3-theme-off.css
@@ -65,7 +65,7 @@
 
 .w3-theme {
     color: #000 !important;
-    background-color: #3258ff !important
+    background-color: #000000 !important
 }
 
 .w3-text-theme {
