--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/bluenew">Pink</a></h4>
+                    <h4><a href="/pink">Pink</a></h4>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/bluenew">Orange</a></h4>
+                    <h4><a href="/orange">Orange</a></h4>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/bluenew">White</a></h4>
+                    <h4><a href="/white">White</a></h4>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/bluenew">Yellow</a></h4>
+                    <h4><a href="/yellow">Yellow</a></h4>
                 </div>
             </div>
         </div>
