removed old methods

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/fadeoffnew">Off</a></h4>
+                    <h4><a href="/fadeoff">Off</a></h4>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/rednew">Red</a></h4>
+                    <h4><a href="/red">Red</a></h4>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/greennew">Green</a></h4>
+                    <h4><a href="/green">Green</a></h4>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="w3-third w3-section">
             <div class="w3-card-4">
                 <div class="w3-container w3-white">
-                    <h4><a href="/bluenew">Blue</a></h4>
+                    <h4><a href="/blue">Blue</a></h4>
                 </div>
             </div>
         </div>
