--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>LED control Page</title>
+<title>LED Control Centre</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-amber.css"> -->
@@ -33,7 +33,7 @@
     </div>
 
     <div class="w3-container w3-padding-32 w3-theme-d1">
-        <h1>LED Controller</h1>
+        <h1>LED Control Centre</h1>
     </div>
 
     <div class="w3-row-padding w3-theme">
@@ -117,7 +117,7 @@
 
     </div>
     <div class="w3-container w3-theme-d4">
-        <p class="w3-large">Europe Italy</p>
+        <p class="w3-large">LED Control Centre</p>
     </div>
 
 </body>
