--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="w3-row w3-padding w3-theme-d2 w3-xlarge">
         <div class="w3-quarter">
             <div class="w3-bar">
-                <a href="#" class="w3-bar-item w3-button"><i class="fa fa-bars"></i></a>
+                <a href="/fadeoff" class="w3-bar-item w3-button"><i class="fa fa-bars"></i></a>
             </div>
         </div>
 
